update ee-windows and add ee-azure

--- a/execution-environments/ee-azure/requirements.yml
+++ b/execution-environments/ee-azure/requirements.yml
@@ -5,3 +5,5 @@ collections:
   - ansible.windows
   - community.windows
   - chocolatey.chocolatey
+  - name: azure.azcollection
+    version: "1.15.0"
