--- a/.github/workflows/publish-ee.yml
+++ b/.github/workflows/publish-ee.yml
@@ -10,11 +10,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-            fetch-depth: 0
+            fetch-depth: 2
+
       - uses: tj-actions/changed-files@v35
         id: ee-changes
         with:
+          since_last_remote_commit: true
           files: 'execution-environments/**/*'
+          files_ignore: '**/README.md'
 
       - name: List all changed files
         run: |
