--- a/execution-environments/ee-autodotes-kasa/execution-environment.yml
+++ b/execution-environments/ee-autodotes-kasa/execution-environment.yml
@@ -4,6 +4,7 @@ version: 2
 dependencies:
   galaxy: requirements.yml
   python: requirements.txt
+  system: bindep.txt
 
 additional_build_steps:
   prepend: |
