--- a/execution-environments/ee-windows/requirements.yml
+++ b/execution-environments/ee-windows/requirements.yml
@@ -2,6 +2,9 @@
 # 05-09-23 12:21
 ---
 collections:
+  - ansible.controller
   - ansible.windows
   - community.windows
+  - community.general
   - chocolatey.chocolatey
+  - servicenow.itsm
