--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,10 +1,14 @@
 [galaxy]
-server_list = automation_hub, release_galaxy
+server_list = autodotes, automation_hub, release_galaxy
+
+[galaxy_server.autodotes]
+url=https://automation-hub.autodotes.com
+token=pah_token
 
 [galaxy_server.automation_hub]
 url=https://cloud.redhat.com/api/automation-hub/
 auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
-token=my_ah_token
+token=rh_ah_token
 
 [galaxy_server.release_galaxy]
 url=https://galaxy.ansible.com/
