--- a/execution-environments/ee-windows/requirements.yml
+++ b/execution-environments/ee-windows/requirements.yml
@@ -4,7 +4,8 @@
 collections:
   - name: ansible.controller
     version: 4.3.0
-  - ansible.windows
+  - name: ansible.windows
+    version: 1.9.0
   - community.windows
   - community.general
   - chocolatey.chocolatey
