point directly at certified repo

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 server_list = autodotes, automation_hub, release_galaxy
 
 [galaxy_server.autodotes]
-url=https://automation-hub.autodotes.com
+url=https://automation-hub.autodotes.com/api/galaxy/content/rh-certified/
 token=pah_token
 
 [galaxy_server.automation_hub]
