update use of rh content

--- a/execution-environments/ee-windows/requirements.yml
+++ b/execution-environments/ee-windows/requirements.yml
@@ -10,6 +10,7 @@ collections:
     version: 1.9.0
   - name: community.general
     version: 6.6.0
-  - chocolatey.chocolatey
+  - name: chocolatey.chocolatey
+    version: 1.4.0
   - name: servicenow.itsm
     version: 2.1.0
