--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,12 +1,8 @@
 [galaxy]
-server_list = autodotes, automation_hub, release_galaxy
-
-[galaxy_server.autodotes]
-url=https://automation-hub.autodotes.com/api/galaxy/content/rh-certified/
-token=pah_token
+server_list = automation_hub, release_galaxy
 
 [galaxy_server.automation_hub]
-url=https://cloud.redhat.com/api/automation-hub/
+url=https://console.redhat.com/api/automation-hub/content/published/
 auth_url=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/token
 token=rh_ah_token
 
