update step to copy brk file

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,6 +71,12 @@ jobs:
           AH_TOKEN: ${{ secrets.AH_TOKEN }}
           PAH_TOKEN: ${{ secrets.PAH_TOKEN }}
 
+      - name: Add to context if applicable
+        id: update-context
+        working-directory: execution-environments/${{ inputs.EE_FOLDER_NAME }}
+        run: |
+          [[ -e .files/krb5.conf ]] && cp .files/krb5.conf context/krb5.conf
+
       - name: Build image
         id: build-image
         working-directory: execution-environments/${{ inputs.EE_FOLDER_NAME }}
