--- a/execution-environments/ee-windows/requirements.yml
+++ b/execution-environments/ee-windows/requirements.yml
@@ -2,6 +2,8 @@
 collections:
   - name: ansible.windows
     version: 1.9.0
+  - name: ansible.utils
+    version: 2.9.0
   - name: community.windows
     version: 1.9.0
   - name: community.general
