--- a/execution-environments/ee-openshift/execution-environment.yml
+++ b/execution-environments/ee-openshift/execution-environment.yml
@@ -31,6 +31,5 @@ additional_build_steps:
       && chmod 777 *
       && tar xvf openshift-install-linux.tar.gz openshift-install
       && tar xvf openshift-client-linux.tar.gz oc kubectl
-      && cp oc kubectl /usr/local/bin
-      && cd ..
-    - RUN oc version && ocp-tools/openshift-install version
+      && cp oc kubectl openshift-install /usr/local/bin
+    - RUN oc version && openshift-install version
