--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /requirements.txt
 
 # EE Contexts
-execution-environments/**/context/
+**/context/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
