--- a/.github/workflows/publish-ee.yml
+++ b/.github/workflows/publish-ee.yml
@@ -22,8 +22,12 @@ jobs:
           since_last_remote_commit: true
           files: '**/*'
           files_ignore: |
-            **/README.md
+            **/*.md
+            **/*.cfg
             **/.files/*
+            .github/*
+            requirements.workflow.txt
+
 
       - name: Determine EEs to build
         id: ee-changes
