--- a/ee-vmware/execution-environment.yml
+++ b/ee-vmware/execution-environment.yml
@@ -7,7 +7,8 @@ options:
 dependencies:
   galaxy:
     collections:
-      - ansible.controller
+      - name: ansible.controller
+        version: "4.4.2"
       - name: ansible.windows
         version: "1.14.0"
       - community.windows
