--- a/ee-windows/execution-environment.yml
+++ b/ee-windows/execution-environment.yml
@@ -37,8 +37,8 @@ additional_build_files:
     dest: configs
 
 additional_build_steps:
-  prepend: 
+  prepend_final: 
     - COPY _build/configs/krb5.conf /etc/krb5.conf
-  append:
+  append_final:
     - RUN dnf install -y crypto-policies-scripts
     - RUN update-crypto-policies --set DEFAULT:AD-SUPPORT
