--- a/ee-proxmox/execution-environment.yml
+++ b/ee-proxmox/execution-environment.yml
@@ -1,11 +1,24 @@
 ---
-version: 1
+version: 3
+
+options:
+  package_manager_path: /usr/bin/microdnf
+
+images:
+  base_image:
+    name: registry.redhat.io/ansible-automation-platform-24/ee-minimal-rhel8:latest
+
 dependencies:
-  galaxy: requirements.yml
-  python: requirements.txt
+  galaxy:
+    collections:
+      - name: community.general
+        version: "6.5.0"
+  python:
+    - proxmoxer==2.0.1
+    - requests==2.28.2
+    - requests-ntlm==1.2.0
+    - requests-credssp==2.0.0
 
 additional_build_steps:
-  prepend: |
-    RUN pip3 install --upgrade pip setuptools
-  append:
-    - RUN ls -la /etc
+  prepend_final:
+    - RUN pip3 install --upgrade pip setuptools
