--- a/ee-azure/execution-environment.yml
+++ b/ee-azure/execution-environment.yml
@@ -37,7 +37,7 @@ additional_build_files:
 
 additional_build_steps:
   prepend_final: 
-    - COPY krb5.conf /etc/krb5.conf
+    - COPY _build/configs/krb5.conf /etc/krb5.conf
   append_final:
     - RUN microdnf install -y crypto-policies-scripts
     - RUN update-crypto-policies --set DEFAULT:AD-SUPPORT
