--- a/ee-vmware/execution-environment.yml
+++ b/ee-vmware/execution-environment.yml
@@ -7,8 +7,10 @@ options:
 dependencies:
   galaxy:
     collections:
-      - ansible.controller
-      - ansible.windows
+      - name: ansible.controller
+        version: "4.4.2"
+      - name: ansible.windows
+        version: "1.14.0"
       - community.windows
       - community.vmware
       - vmware.vmware_rest
