leave out f5 altogether

--- a/ee-networking/execution-environment.yml
+++ b/ee-networking/execution-environment.yml
@@ -31,10 +31,10 @@ dependencies:
         version: "5.2.0"
       - name: cisco.dnac
         version: "6.7.4"
-      - name: f5networks.f5_modules
-        version: "1.25.1"
-      - name: f5networks.f5_bigip
-        version: "3.1.0"
+      # - name: f5networks.f5_modules
+      #   version: "1.25.1"
+      # - name: f5networks.f5_bigip
+      #   version: "3.1.0"
       - name: junipernetworks.junos
         version: "5.3.0"
       - name: paloaltonetworks.panos
