--- a/ee-networking/execution-environment.yml
+++ b/ee-networking/execution-environment.yml
@@ -21,6 +21,8 @@ dependencies:
         version: "22.7.0"
       - name: ansible.controller
         version: "4.4.2"
+      - name: ansible.scm
+        version: "1.2.1"
       - name: ansible.netcommon
         version: "5.2.0"
       - name: arista.eos
