--- a/ee-satellite/execution-environment.yml
+++ b/ee-satellite/execution-environment.yml
@@ -13,5 +13,5 @@ additional_build_files:
       dest: configs
 
 additional_build_steps:
-  prepend_galaxy:
+  append_final:
     - COPY _build/configs/ansible.cfg /etc/ansible/ansible.cfg
