add foreman collection

--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -17,3 +17,5 @@ dependencies:
         version: "6.5.0"
       - name: awx.awx
         version: "22.7.0"
+      - name: theforeman.foreman
+        version: "3.14.0"
