add some packages to env

--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -11,6 +11,12 @@ images:
 dependencies:
   system:
     - git
+    - passlib
+    - python-lxml
+    - python-xmltodict
+    - python-jmespath
+  python:
+    - requests
   galaxy:
     collections:
       - name: community.general
