fix passlib package name

--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -11,7 +11,7 @@ images:
 dependencies:
   system:
     - git
-    - passlib
+    - python-passlib
     - python-lxml
     - python-xmltodict
     - python-jmespath
