add packaging dependency

--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -17,6 +17,7 @@ dependencies:
     - lxml
     - xmltodict
     - jmespath
+    - packaging
   galaxy:
     collections:
       - name: community.general
