--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -10,6 +10,7 @@ images:
 
 dependencies:
   system:
+    - curl
     - git
   python:
     - requests
@@ -42,3 +43,7 @@ dependencies:
         version: "1.4.0"
       - name: servicenow.itsm
         version: "2.1.0"
+
+additional_build_steps:
+  prepend_final: |
+    - RUN curl -L https://aka.ms/InstallAzureCli | bash
