--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -23,6 +23,8 @@ dependencies:
     collections:
       - name: awx.awx
         version: "22.7.0"
+      - name: amazon.aws
+        version: "7.2.0"
       - name: ansible.controller
         version: "4.5.0"
       - name: theforeman.foreman
