add botocore and boto3 to ee def

--- a/ee-default/execution-environment.yml
+++ b/ee-default/execution-environment.yml
@@ -19,6 +19,8 @@ dependencies:
     - xmltodict
     - jmespath
     - packaging
+    - botocore
+    - boto3
   galaxy:
     collections:
       - name: awx.awx
