test bb pipeline changes

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,31 @@ image: quay.io/zleblanc/bitbucket-builder:v2
 pipelines:
   default:
     - step:
-        name: 'Build execution environment'
+      name: 'No-op pipeline'
+      deployment: master
+      script:
+        - echo 'No-op'
+  custom:
+    build-ee:
+      - variables:
+        - name: EE_FOLDER
+      - step:
+        name: Login to registries
         deployment: master
         script:
-          - ansible-builder --help
+          - podman login quay.io -u $QUAY_USERNAME -p $QUAY_PASSWORD
+          - podman login registry.redhat.io -u $RH_USERNAME -p $RH_PASSWORD
+      - step:
+        name: Replace Automation Hub token in ansible.cfg
+        deployment: master
+        script:
+          - sed -i "s/rh_ah_token/$AH_TOKEN/1" ansible.cfg
+      - step:
+        name: Build the execution environment
+        deployment: master
+        script:
+          - echo $BITBUCKET_CLONE_DIR
+          - echo $BITBUCKET_WORKSPACE
+          - echo $BITBUCKET_COMMIT
+          - cd $BITBUCKET_CLONE_DIR
+          - ls -al
