move no-op to test deployment

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,7 +4,7 @@ pipelines:
   default:
     - step:
         name: 'No-op pipeline'
-        deployment: master
+        deployment: test
         script:
           - echo 'No-op'
   custom:
