--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,26 +12,26 @@ pipelines:
                 - echo 'No-op'
   custom:
     build-ee:
-    - stage:
-        name: Execution Environment Build
-        deployment: master
-        variables:
+      - variables:
           - name: EE_FOLDER
-        steps:
-          - step:
-              name: Login to registries
-              script:
-                - podman login quay.io -u $QUAY_USERNAME -p $QUAY_PASSWORD
-                - podman login registry.redhat.io -u $RH_USERNAME -p $RH_PASSWORD
-          - step:
-              name: Replace Automation Hub token in ansible.cfg
-              script:
-                - sed -i "s/rh_ah_token/$AH_TOKEN/1" ansible.cfg
-          - step:
-              name: Build the execution environment
-              script:
-                - echo $BITBUCKET_CLONE_DIR
-                - echo $BITBUCKET_WORKSPACE
-                - echo $BITBUCKET_COMMIT
-                - cd $BITBUCKET_CLONE_DIR
-                - ls -al
+      - stage:
+          name: Execution Environment Build
+          deployment: master
+          steps:
+            - step:
+                name: Login to registries
+                script:
+                  - podman login quay.io -u $QUAY_USERNAME -p $QUAY_PASSWORD
+                  - podman login registry.redhat.io -u $RH_USERNAME -p $RH_PASSWORD
+            - step:
+                name: Replace Automation Hub token in ansible.cfg
+                script:
+                  - sed -i "s/rh_ah_token/$AH_TOKEN/1" ansible.cfg
+            - step:
+                name: Build the execution environment
+                script:
+                  - echo $BITBUCKET_CLONE_DIR
+                  - echo $BITBUCKET_WORKSPACE
+                  - echo $BITBUCKET_COMMIT
+                  - cd $BITBUCKET_CLONE_DIR
+                  - ls -al
